language/move-compiler/tests/move_check/typing/assign_duplicate_assigning.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:6:10
  │
6 │         (x, x) = (0, 0);
  │          ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:6:13
  │
6 │         (x, x) = (0, 0);
  │          -  ^ Duplicate usage of local 'x' in a given assignment
  │          │   
  │          Previously assigned here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:6:13
  │
6 │         (x, x) = (0, 0);
  │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:8:10
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │          ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:8:15
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │          -    ^ Duplicate usage of local 'f' in a given assignment
  │          │     
  │          Previously assigned here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:8:15
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │               ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:8:19
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │          -        ^ Duplicate usage of local 'f' in a given assignment
  │          │         
  │          Previously assigned here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/assign_duplicate_assigning.move:8:19
  │
8 │         (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                   ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

